--- a/lib/style.css
+++ b/lib/style.css
@@ -6,34 +6,47 @@ body {
     background-color: #eee;
     direction: rtl;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background: url("images/menu_home.png") no-repeat 0 top;
 }
 
-#homeImage {
-    width: 15px;
-    height: 15px;
-    background-color: blue;
-    background: url("images\menu_home.png") no-repeat left top;
+.homeImage {
+    width: 17px;
+    background: url("images/menu_home.png") no-repeat 0 top;
+    z-index: 1000;
 }
 
-nav > ul {
+.topNav {
+    background: #444 url() repeat-x center top;
+}
+
+body > .topNav {
+    height: 120px;
+    position: relative;
+    top: 0px;
+}
+
+body > .topNav > ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    margin-right: 170px;
+    bottom: 0px;
+    position: absolute;
 }
 
-nav > ul > li {
+.topNav > ul > li {
     display: inline-block;
     padding: 0;
     margin: 0;
     z-index: 1000;
 }
 
-nav > ul > li > a {
+.topNav > ul > li > a {
     text-decoration: none;
     color: white;
     padding: 15px;
     display: inline-block;
-    width: 100px;
 }
 
 .dropDownMenu {
@@ -43,6 +56,7 @@ nav > ul > li > a {
 .dropDownContent {
     display: none;
     position: absolute;
+    top: 0xp;
 }
   
 .menuItem:hover > a {
@@ -54,39 +68,37 @@ nav > ul > li > a {
 .dropDownMenu:hover > .dropDownContent {
     color: darkblue;
     display: block;
-    background-color: #444;
 }
   
-nav.dropDownContent > ul > li > a:hover {
+.dropDownContent > ul > li > a:hover {
     color: darkblue;
     display: block;
 }
 
-nav.dropDownContent > ul > li {
+.dropDownContent > ul > li {
     display: block;
-  }
-
-.topNav {
-    background: #444 url() repeat-x center top;
-    height: 120px;
 }
 
-#pazLogoo {
-    width: 50px;
+a.pazLogo {
+    display: block;
+    width: 142px;
+    height: 93px;
+    position: absolute;
+    bottom: -15px;
+    right: -8px;
 }
 
 main {
     width: 900px;
     position: relative;
     margin: auto;
+    margin-top: 30px;
     /*display: none;*/
 }
 
 .row::after {
     content: "";
     clear: both;
-
-
     display: table;
 }
 
@@ -239,10 +251,13 @@ nav.bottomNav > ul > li {
 
 .bottomNav > ul > li > a {
     text-decoration: none;
-    color: red;
-    padding: 1px;
+    color: white;
+    padding: 3px;
+    font-size: 14px;
     display: inline-block;
-   
+    margin-top: 16px;
+    vertical-align: bottom;
+    height: 17px;   
 }
 
 .bottomMenu:hover > a {
@@ -250,3 +265,4 @@ nav.bottomNav > ul > li {
     color: darkblue;
     display: block;
 }
+
